<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">New Castle County</string>
    <string name="blog_description"></string>
    <string name="feed">Feed</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="contact">Contact</string>
    <string name="refresh">Refresh</string>
	<string name="subject">Subject</string>
	<string name="message">Message</string>
	<string name="send">Send</string>
	<string name="contact_message">Do you have something to say. feel free to send a message to us. We will be glad to respond it.</string>
	<string name="article">Article</string>
	<string name="alert">Unable to get the content.</string>
	<string name="newsroom">NewsRoom</string>
	
</resources>