<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:background="@color/bg_color" >
	
	<RelativeLayout
		android:id="@+id/lytTitlebar"
		android:layout_height="45dp"
		android:layout_width="fill_parent"
		android:layout_alignParentTop="true"
		android:background="@drawable/bar" >
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/contact"
		    android:textColor="@color/title_color"
		    android:textSize="20sp"
		    android:textStyle="bold"
		    android:layout_centerInParent="true"/>
	</RelativeLayout>
	<ImageView 
	    android:id="@+id/imgSeparator"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@color/line_color"
		android:layout_below="@+id/lytTitlebar"/>
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@+id/imgSeparator">
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingTop="20dp"
				android:paddingLeft="20dp"
				android:paddingRight="20dp">
				<TextView 
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/contact_message"
				    android:textColor="@color/text_color"
				    android:textSize="14sp"
				    android:layout_marginBottom="15dp"/>
				<EditText 
				    android:id="@+id/edtSubject"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:inputType="text"
				    android:hint="@string/subject"
				    android:textColor="@color/textform_color"
					android:textSize="14sp"
				    android:layout_marginBottom="15dp"
				    android:background="@drawable/form"/>
				<EditText 
				    android:id="@+id/edtMessage"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:inputType="textMultiLine"
				    android:hint="@string/message"
				    android:textColor="@color/textform_color"
				    android:lines="5"
				    android:gravity="top|left"
				    android:textSize="14sp"
				    android:layout_marginBottom="15dp"
				    android:background="@drawable/form"/>
				<Button 
				    android:id="@+id/btnSend"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/send"
				    android:textColor="@color/textbutton_color"
				    android:textSize="16sp"
				    android:textStyle="bold"
				    android:background="@drawable/button"/>
			</LinearLayout>
		</ScrollView>
</RelativeLayout>
